summative.moria.Moria.scala.error
Compilation error:
Moria:4: error: illegal start of simple expression
  while () 
         ^Moria:15: error: ')' expected but '}' found.
} 
^