summative.moria.Moria.scala.code
while (!estSurBiscuit() || !estFaceMur()) {
  retourne()
  do {avance()}
  while () 
  if (estSurBiscuit){
    prendBiscuit()
  	retourne()
		do {avance()}
  	while (!estSurBiscuit)
  	recule()
  	poseBiscuit()
	} else {
    droite();avance();droite();avance()
  }
}